# MAI-OOP-labs

./: .gitignore  CMakeLists.txt  README.md
lab_1/: CMakeLists.txt
lab_1/include/: lab_1.hpp
lab_1/src/: lab_1.cpp  main.cpp
lab_1/tests/: test_lab_1.cpp
lab_2/: CMakeLists.txt
lab_2/include/: lab_2.hpp
lab_2/src/: lab_2.cpp
lab_2/tests/: test_lab_2.cpp
